--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="status">Checking YouTube API...</div>
 
 <script>
-  const API_KEY = "YOUR_NEW_API_KEY_HERE";  // Replace with your key
+  const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";  // Replace with your key
   const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ"; // Example channel
 
   async function checkYouTubeAPI() {
