--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <style>
   body { 
     display:flex; 
+    flex-direction:column;
     justify-content:center; 
     align-items:center; 
     height:100vh; 
@@ -19,19 +20,34 @@
   }
   .success { color:#4caf50; }
   .error { color:#f44336; }
-  .warning { color:#ff9800; }
+  button { 
+    margin-top:20px; 
+    padding:10px 20px; 
+    font-size:1rem; 
+    cursor:pointer; 
+    border:none; 
+    border-radius:5px;
+    background:#222; 
+    color:#fff;
+  }
+  button:hover { background:#444; }
 </style>
 </head>
 <body>
 
-<div id="status">Checking YouTube API...</div>
+<div id="status">Click "Check Status" to test YouTube API</div>
+<button id="refreshBtn">Check Status</button>
 
 <script>
-  const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";  // Replace with your key
-  const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ"; // Example channel
+  const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";   // <-- insert your key here
+  const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
+
+  const statusDiv = document.getElementById("status");
+  const refreshBtn = document.getElementById("refreshBtn");
 
   async function checkYouTubeAPI() {
-    const statusDiv = document.getElementById("status");
+    statusDiv.textContent = "Checking YouTube API...";
+    statusDiv.className = "";
     try {
       const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
       const data = await res.json();
@@ -41,13 +57,8 @@
         statusDiv.className = "success";
       } else {
         const errorMsg = data.error?.message || "Unknown error";
-        if(data.error?.errors?.some(e => e.reason === "quotaExceeded")){
-          statusDiv.textContent = `Quota exceeded ⚠️: ${errorMsg}`;
-          statusDiv.className = "warning";
-        } else {
-          statusDiv.textContent = `Unsuccessful ❌: ${errorMsg}`;
-          statusDiv.className = "error";
-        }
+        statusDiv.textContent = `Unsuccessful ❌: ${errorMsg}`;
+        statusDiv.className = "error";
       }
     } catch (err) {
       console.error(err);
@@ -56,7 +67,7 @@
     }
   }
 
-  checkYouTubeAPI();
+  refreshBtn.addEventListener("click", checkYouTubeAPI);
 </script>
 
 </body>
