--- a/index.html
+++ b/index.html
@@ -10,29 +10,52 @@
     color: #fff;
     font-family: Arial, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     text-align: center;
     margin: 0;
+    padding: 1rem;
+  }
+
+  a {
+    color: #fff;
+    text-decoration: none;
+    white-space: nowrap; /* prevents text from wrapping */
   }
 
   h1 {
     text-transform: uppercase;
     font-size: 3rem;
     letter-spacing: 2px;
+    margin-top: 1rem;
+  }
+
+  img {
+    max-width: 150px;
+    width: 30%;
+    height: auto;
+    margin-bottom: 1rem;
   }
 
   @media (min-width: 768px) {
     h1 {
       font-size: 5rem;
     }
+    img {
+      max-width: 200px;
+    }
   }
 </style>
 </head>
 <body>
 
-<h1>FLORIDA PUNK ARCHIVIST</h1>
+<!-- YouTube channel logo -->
+<img src="https://yt3.googleusercontent.com/ytc/AL5GRJVOzP_3m5k8JcP7-abc123xyz=s900-c-k-c0x00ffffff-no-rj" alt="Florida Punk Archivist Logo">
+
+<!-- Clickable channel text -->
+<h1><a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">FLORIDA PUNK ARCHIVIST</a></h1>
 
 </body>
 </html>
