--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 </head>
 <body>
 
-<!-- YouTube channel logo -->
-<img src="https://yt3.googleusercontent.com/ytc/AL5GRJVOzP_3m5k8JcP7-abc123xyz=s900-c-k-c0x00ffffff-no-rj" alt="Florida Punk Archivist Logo">
+<!-- Generic YouTube logo -->
+<img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" alt="YouTube Logo">
 
 <!-- Clickable channel text -->
 <h1><a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">FLORIDA PUNK ARCHIVIST</a></h1>
