--- a/index.html
+++ b/index.html
@@ -27,25 +27,15 @@
 
   h1 {
     text-transform: uppercase;
-    font-size: 3rem;
     letter-spacing: 2px;
     margin-top: 1rem;
+    font-size: clamp(2rem, 6vw, 5rem); /* responsive font size */
   }
 
   img {
-    max-width: 150px;
-    width: 30%;
+    width: clamp(80px, 20vw, 200px); /* responsive width */
     height: auto;
     margin-bottom: 1rem;
-  }
-
-  @media (min-width: 768px) {
-    h1 {
-      font-size: 5rem;
-    }
-    img {
-      max-width: 200px;
-    }
   }
 </style>
 </head>
