--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   a {
     color: #fff;
     text-decoration: none;
-    white-space: nowrap; /* prevent text wrapping */
+    white-space: nowrap; /* prevents text wrapping */
   }
 
   /* HERO SECTION */
@@ -31,46 +31,46 @@
     flex-direction: column; /* stacked on small screens */
     align-items: center;
     justify-content: center;
-    gap: 0.5em; /* spacing scales with text size */
+    gap: 0.6em;
   }
 
   /* Inline layout for larger screens */
   @media (min-width: 600px) {
     .hero {
       flex-direction: row;
-      align-items: center; /* vertical centering */
-      gap: 0.3em; /* horizontal spacing scales with font size */
+      gap: 0.5em;
     }
   }
 
   h1 {
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-size: clamp(1.5rem, 10vw, 5rem);
+    font-size: clamp(1.8rem, 9vw, 5rem);
     margin: 0;
     display: flex;
-    align-items: center; /* ensures vertical centering */
+    align-items: center;
   }
 
-  /* Logo scales with text height and has hover effect */
+  /* FIXED: Logo now scales appropriately and reliably loads */
   .hero img {
-    height: 1em; /* matches h1 font size */
+    height: 1.2em;      /* slightly larger than text */
     width: auto;
     display: block;
-    transition: transform 0.3s ease;
   }
 
   .hero img:hover {
     transform: scale(1.05);
+    transition: transform 0.25s ease;
   }
 </style>
 </head>
 <body>
 
 <div class="hero">
-  <!-- Clickable YouTube logo -->
+  <!-- YouTube logo that always loads reliably -->
   <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ">
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" alt="YouTube Logo">
+    <img src="https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo.svg" 
+         alt="YouTube Logo">
   </a>
 
   <!-- Clickable channel text -->
