--- a/index.html
+++ b/index.html
@@ -4,82 +4,66 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Florida Punk Archivist</title>
+
 <style>
-  /* BODY */
+  /* PAGE LAYOUT */
   body {
-    background-color: #000;
+    background: #000;
     color: #fff;
-    font-family: Arial, sans-serif;
+    margin: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;      /* perfect vertical centering */
     height: 100vh;
-    margin: 0;
-    padding: 1rem;
-    overflow-x: hidden; /* prevents horizontal cut-off */
+    text-align: center;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
   }
 
-  /* LINKS */
-  a {
-    color: #fff;
-    text-decoration: none;
-    white-space: nowrap; /* prevents text wrapping */
-  }
-
-  /* HERO SECTION */
-  .hero {
+  .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 0.6em;
-    max-width: 100%;
   }
 
-  /* Inline layout for larger screens */
-  @media (min-width: 650px) {
-    .hero {
-      flex-direction: row;
-      gap: 0.5em;
-    }
+  /* YOUTUBE LOGO */
+  .yt-logo {
+    width: clamp(70px, 12vw, 150px);
+    margin-bottom: 1.5rem;
+    transition: transform 0.35s ease;
   }
 
-  /* TITLE */
+  .yt-logo:hover {
+    transform: scale(1.12);
+  }
+
+  /* MAIN TEXT */
   h1 {
     text-transform: uppercase;
-    letter-spacing: 2px;
+    white-space: nowrap;  /* no wrap ever */
+    font-size: clamp(1.5rem, 10vw, 6rem);
     margin: 0;
-    display: flex;
-    align-items: center;
-    font-size: clamp(1.2rem, 8vw, 4rem); /* tightened to prevent cut-off */
-    max-width: 100vw; /* ensures it never exceeds screen width */
-    overflow: hidden; /* prevents cut-off overflow */
   }
 
-  /* LOGO (white version) */
-  .hero img {
-    height: 1.4em;  /* slightly larger relative to text */
-    width: auto;
-    display: block;
-  }
-
-  .hero img:hover {
-    transform: scale(1.05);
-    transition: transform 0.25s ease;
+  a {
+    color: white;
+    text-decoration: none;
   }
 </style>
 </head>
 <body>
 
-<div class="hero">
+<div class="container">
 
-  <!-- YouTube logo in WHITE, made for dark backgrounds -->
+  <!-- YouTube Logo (clickable) -->
   <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ">
-    <img src="https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo_white.svg"
+    <img class="yt-logo"
+         src="https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo_white.svg"
          alt="YouTube Logo">
   </a>
 
-  <!-- Channel name -->
+  <!-- Title -->
   <h1>
     <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ">
       FLORIDA PUNK ARCHIVIST
