--- a/index.html
+++ b/index.html
@@ -40,14 +40,11 @@
   /* TITLE */
   h1 {
     text-transform: uppercase;
-    white-space: nowrap;      /* NEVER wrap */
+    white-space: nowrap;      
     margin: 0;
-
-    /* Auto scale with screen width, no cutoff */
-    font-size: min(12vw, 60px);
-
+    font-size: min(12vw, 60px);   /* Scales nicely on all screens */
     max-width: 100vw;
-    overflow: hidden;
+    overflow: hidden;             /* Prevent cutoff */
   }
 
   a {
@@ -60,11 +57,12 @@
 
 <div class="container">
 
-  <!-- WORKING YouTube button -->
+  <!-- EMBEDDED YOUTUBE SVG BUTTON — NEVER BREAKS -->
   <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ">
-    <img class="yt-button"
-      src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/YouTube_social_white_squircle_%282017%29.svg/1200px-YouTube_social_white_squircle_%282017%29.svg.png"
-      alt="YouTube Button">
+    <svg class="yt-button" viewBox="0 0 90 63" xmlns="http://www.w3.org/2000/svg">
+      <rect width="90" height="63" rx="12" fill="#FF0000"/>
+      <polygon points="36,18 63,31.5 36,45" fill="#FFFFFF"/>
+    </svg>
   </a>
 
   <!-- TITLE -->
