--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Florida Punk Archivist</title>
 
 <style>
-  /* PAGE LAYOUT */
   body {
     background: #000;
     color: #fff;
@@ -26,7 +25,7 @@
     align-items: center;
   }
 
-  /* YOUTUBE BUTTON */
+  /* YOUTUBE BUTTON (always loads, SVG-based) */
   .yt-button {
     width: clamp(80px, 18vw, 160px);
     margin-bottom: 1.5rem;
@@ -37,14 +36,13 @@
     transform: scale(1.12);
   }
 
-  /* TITLE */
+  /* FIXED TEXT: never wraps, never cuts off, always fits */
   h1 {
-    text-transform: uppercase;
-    white-space: nowrap;      
+    white-space: nowrap;
     margin: 0;
-    font-size: min(12vw, 60px);   /* Scales nicely on all screens */
+    font-size: 8vw;      /* ← Main fix */
     max-width: 100vw;
-    overflow: hidden;             /* Prevent cutoff */
+    overflow: hidden;
   }
 
   a {
@@ -57,7 +55,7 @@
 
 <div class="container">
 
-  <!-- EMBEDDED YOUTUBE SVG BUTTON — NEVER BREAKS -->
+  <!-- YOUTUBE SVG BUTTON -->
   <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ">
     <svg class="yt-button" viewBox="0 0 90 63" xmlns="http://www.w3.org/2000/svg">
       <rect width="90" height="63" rx="12" fill="#FF0000"/>
