--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     background: #000;
     color: #fff;
     margin: 0;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    overflow: hidden;
     font-family: Arial, sans-serif;
     text-align: center;
   }
@@ -25,24 +24,22 @@
     align-items: center;
   }
 
-  /* YOUTUBE BUTTON (always loads, SVG-based) */
+  /* YOUTUBE BUTTON (embedded SVG, always works) */
   .yt-button {
     width: clamp(80px, 18vw, 160px);
     margin-bottom: 1.5rem;
     transition: transform 0.3s ease;
   }
-
   .yt-button:hover {
     transform: scale(1.12);
   }
 
-  /* FIXED TEXT: never wraps, never cuts off, always fits */
+  /* TEXT — starts large, JS will shrink it */
   h1 {
-    white-space: nowrap;
     margin: 0;
-    font-size: 8vw;      /* ← Main fix */
+    white-space: nowrap;
+    font-size: 80px; /* starting size (will be reduced if needed) */
     max-width: 100vw;
-    overflow: hidden;
   }
 
   a {
@@ -64,13 +61,38 @@
   </a>
 
   <!-- TITLE -->
-  <h1>
+  <h1 id="title">
     <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ">
       FLORIDA PUNK ARCHIVIST
     </a>
   </h1>
 
 </div>
+
+<script>
+/* AUTO-SHRINK TEXT UNTIL IT FITS IN ONE LINE */
+function fitTitle() {
+  const title = document.getElementById("title");
+  let fontSize = 80; // starting size
+
+  title.style.fontSize = fontSize + "px";
+
+  // shrink until it fits
+  while (title.scrollWidth > window.innerWidth - 20 && fontSize > 5) {
+    fontSize -= 1;
+    title.style.fontSize = fontSize + "px";
+  }
+}
+
+// Fit on load
+window.addEventListener("load", fitTitle);
+
+// Fit on window resize (mobile rotation, etc.)
+window.addEventListener("resize", () => {
+  clearTimeout(window.fitTimeout);
+  window.fitTimeout = setTimeout(fitTitle, 100);
+});
+</script>
 
 </body>
 </html>
