--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Florida Punk Archivist</title>
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<!-- Grungy punk font -->
+<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 
 <style>
   body {
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Bebas Neue', Arial, sans-serif;
+    font-family: 'Metal Mania', Arial, sans-serif;
     text-align: center;
   }
 
